# D-A-I-R-A

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  ARCHITECTURE_PHASE_1_2.md  COMMIT_PHASE_2.sh  CONTRIBUTING.md  DELIVERY_SUMMARY.md  Dockerfile.backend  Dockerfile.frontend  EGYPT_VISION.md  LICENSE  MEGA_BLUEPRINT.md  Makefile  PHASE_2_COMPLETION_SUMMARY.md  PHASE_2_INTEGRATION_CHECKLIST.md  PLATFORM_STRATEGY.md  QUICKSTART.md  README.md  README.production.md  SETUP_GUIDE.md  SUMMARY.md  TESTING.md  VERIFICATION.md  alerts.yml  auto-commit.ps1  commit-backend-phase8b.sh  commitlint.config.js  contact.md  demo-anchor.md  docker-compose.dev.yml  docker-compose.services.yml  docker-compose.yml  emotional-explainer.md  feedback-notes.md  golden-user-journey.md  governance.md  invitation.md  language-mental-models.md  manifesto-lite.md  (+13 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
apps/api/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: __init__.py  env.py
apps/api/alembic/versions/: 001_initial.py  001_initial_schema.py
apps/api/app/: config.py  database.py  init_db.py  main.py  models.py
apps/api/app/auth/: __init__.py  dependencies.py  middleware.py  models.py  password.py  rate_limit.py  routes.py  tokens.py
apps/api/app/db/: models.py
apps/api/app/graphql/: __init__.py  mutations.py  queries.py  schema.py  types.py
apps/api/app/models/: __init__.py
apps/api/scripts/: seed.py
apps/api/tests/: test_api.py  test_main.py
apps/api/tests/auth/: __init__.py  test_auth.py  test_password.py
backend/: .env.example  DEVELOPMENT_GUIDE.md  Dockerfile  requirements.txt
ci/: prisma-wait.sh
docs/: API.md  API_HARDENING.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  AUTH.md  BACKEND_HARDENING_IMPLEMENTATION.md  BACKEND_PHASE2_IMPLEMENTATION.md  BRAND.md  CI.md  CODE_OF_CONDUCT.md  COLD_START_STRATEGY.md  CONTRIBUTING.md  CRISIS_MANAGEMENT.md  DAIRA_COMPLETE_PLATFORM_BLUEPRINT.md  DATABASE_OPTIMIZATION.sql  DEVELOPMENT.md  DEVOPS_PHASE4_IMPLEMENTATION.md  EXECUTION_SUMMARY.md  FINANCIAL_MODEL.md  FRONTEND_PHASE3_IMPLEMENTATION.md  GITHUB_ISSUES_TEMPLATES.md  GLOBAL_SCALE_ROADMAP.md  GOVERNMENT_COMPLIANCE_STRATEGY.md  INNOVATIVE_FEATURES.md  INTEGRATED_16WEEK_ROADMAP.md  KICKOFF_GUIDE.md  MASTERPLAN.md  MODERATION.md  OBSERVABILITY.md  PERFORMANCE_PROFILING.md  PHASE_1_CIRCULATORY_SYSTEM.md  PHASE_2_SKELETAL_SYSTEM.md  PHASE_6_ROADMAP.md  PHASE_6_SUMMARY.md  PHASE_7_STRATEGY_SUMMARY.md  PHASE_8B_BACKEND_COMPLETE.md  PHASE_8B_COMPLETE_STATUS.md  PHASE_8B_SOCIAL_GRAPH_ARCHITECTURE.md  PROJECT_OVERVIEW.md  REDIS_TUNING_GUIDE.md  (+12 more)
infra/: .env.example  Dockerfile.api  Dockerfile.web  docker-compose.yml
k8s/: backend-deployment.yaml  config.yaml  staging.yaml
prisma/: schema.prisma
scripts/: fix-pnpm-store-x-drive.ps1  fix-pnpm-store.ps1  seed.py
sql/: 001_init.sql
stack/: architecture.md
tests/: load-test.js
web/: .env.local.example  index.html  middleware.ts  next.config.ts  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/docs/: AUTH.md
(+103 files in other folders)
